Criado arquivo.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pyspark.sql import SparkSession"
+    "from pyspark import SparkContext\n",
+    "from pyspark.sql import SparkSession\n",
+    "import findspark"
    ]
   },
   {
@@ -15,9 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# spark = SparkSession.builder \\\n",
-    "#         .appName(\"SparkSample\") \\\n",
-    "#         .getOrCreate() # .master(\"spark://localhost:8088\")"
+    "findspark.init()\n",
+    "spark = SparkContext(appName = \"trab-eng-dados\")"
    ]
   },
   {
@@ -26,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_raw = spark.read.options(delimiter=\";\", header=True, encoding=\"latin1\", dateFormat=\"dd/MM/yyyy\", inferSchema=True).csv(\"/user/ivan/input/bweb.csv\")\n",
+    "data_raw = spark.read.options(delimiter=\";\", header=True, encoding=\"latin1\", dateFormat=\"dd/MM/yyyy\", inferSchema=True).csv(\"/user/ivan/input/bweb.csv\")\n",
     "# data_raw.show(5)"
    ]
   },
